# event_based_bos

./: .gitignore  Makefile  README.md  bos_event.py  pyproject.toml
configs/: README.md  hot_plate1.yaml
datasets/: README.md
src/: event_image_converter.py  frame_flow_estimator.py  visualizer.py  warp.py
src/costs/: __init__.py  base.py  diff_norm.py  flow_norm.py  flow_norm_pxy.py  image_gradient.py
src/data_loader/: __init__.py  base.py  ccs.py  e2vid.py  helium.py
src/solver/: __init__.py  base.py  generative_max_likelihood.py  patch_eklt.py  patch_eklt_dependent.py  patch_eklt_pyramid2.py
src/types/: __init__.py  flow_patch.py
src/utils/: __init__.py  config_utils.py  event_filters.py  event_utils.py  flow_utils.py  frame_utils.py  misc.py  stat_utils.py  video_utils.py
